cluster/argocd/applications/keycloak.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"argoproj.io/v1alpha1","kind":"Application","metadata":{"annotations":{},"creationTimestamp":"2024-04-02T23:26:41Z","generation":21,"labels":{"source":"external"},"managedFields":[{"apiVersion":"argoproj.io/v1alpha1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{}},"f:labels":{".":{},"f:source":{}}},"f:spec":{".":{},"f:destination":{".":{},"f:namespace":{},"f:server":{}},"f:project":{},"f:source [...]
      synced (all tasks
      run)","operation":{"initiatedBy":{"username":"admin"},"retry":{},"sync":{"revision":"19.4.1","syncOptions":["CreateNamespace=true"],"syncStrategy":{"hook":{}}}},"phase":"Succeeded","startedAt":"2024-04-02T23:27:45Z","syncResult":{"resources":[{"group":"networking.k8s.io","hookPhase":"Running","kind":"NetworkPolicy","message":"networkpolicy.networking.k8s.io/keycloak
      created","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"networking.k8s.io","hookPhase":"Running","kind":"NetworkPolicy","message":"networkpolicy.networking.k8s.io/keycloak-postgresql
      created","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"ServiceAccount","message":"serviceaccount/keycloak
      created","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"ServiceAccount","message":"serviceaccount/keycloak-postgresql
      created","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Secret","message":"secret/keycloak-postgresql
      created","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Secret","message":"secret/keycloak
      created","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"ConfigMap","message":"configmap/keycloak-env-vars
      created","name":"keycloak-env-vars","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/keycloak-postgresql-hl
      created","name":"keycloak-postgresql-hl","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/keycloak-headless
      created","name":"keycloak-headless","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/keycloak
      created","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/keycloak-postgresql
      created","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"StatefulSet","message":"statefulset.apps/keycloak-postgresql
      created","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"StatefulSet","message":"statefulset.apps/keycloak
      created","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"networking.k8s.io","hookPhase":"Running","kind":"Ingress","message":"ingress.networking.k8s.io/keycloak
      created","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"}],"revision":"19.4.1","source":{"chart":"keycloak","helm":{"parameters":[{"name":"ingress.enabled","value":"true"},{"name":"ingress.hostname","value":"keycloak.binesty.corp"},{"name":"ingress.ingressClassName","value":"nginx"}]},"repoURL":"https://charts.bitnami.com/bitnami","targetRevision":"19.4.1"}}},"reconciledAt":"2024-04-02T23:30:50Z","resources":[{"kind":"ConfigMap","name":"keycloak [...]
      roll out complete: 1 new pods have been
      updated...","status":"Healthy"},"kind":"StatefulSet","name":"keycloak","namespace":"keycloak","status":"Synced","version":"v1"},{"group":"apps","health":{"message":"partitioned
      roll out complete: 1 new pods have been
      updated...","status":"Healthy"},"kind":"StatefulSet","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","version":"v1"},{"group":"networking.k8s.io","health":{"status":"Healthy"},"kind":"Ingress","name":"keycloak","namespace":"keycloak","status":"Synced","version":"v1"},{"group":"networking.k8s.io","kind":"NetworkPolicy","name":"keycloak","namespace":"keycloak","status":"Synced","version":"v1"},{"group":"networking.k8s.io","kind":"NetworkPolicy","name":"keycloak-postgres [...]
  creationTimestamp: '2024-04-03T03:30:48Z'
  generation: 663
  labels:
    source: external
  managedFields:
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:source: {}
        f:spec:
          .: {}
          f:destination:
            .: {}
            f:namespace: {}
            f:server: {}
          f:project: {}
          f:source:
            .: {}
            f:chart: {}
            f:helm:
              .: {}
              f:parameters: {}
            f:repoURL: {}
            f:targetRevision: {}
          f:syncPolicy:
            .: {}
            f:syncOptions: {}
        f:status:
          .: {}
          f:controllerNamespace: {}
          f:health: {}
          f:summary: {}
          f:sync:
            .: {}
            f:comparedTo:
              .: {}
              f:destination:
                .: {}
                f:namespace: {}
                f:server: {}
              f:source:
                .: {}
                f:chart: {}
                f:helm:
                  .: {}
                  f:parameters: {}
                f:repoURL: {}
                f:targetRevision: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2024-04-03T03:30:48Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:syncPolicy:
            f:automated: {}
      manager: argocd-server
      operation: Update
      time: '2024-04-04T23:03:33Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:health:
            f:status: {}
          f:history: {}
          f:operationState:
            .: {}
            f:finishedAt: {}
            f:message: {}
            f:operation:
              .: {}
              f:initiatedBy:
                .: {}
                f:username: {}
              f:retry: {}
              f:sync:
                .: {}
                f:prune: {}
                f:revision: {}
                f:syncOptions: {}
                f:syncStrategy:
                  .: {}
                  f:hook:
                    .: {}
                    f:force: {}
            f:phase: {}
            f:startedAt: {}
            f:syncResult:
              .: {}
              f:resources: {}
              f:revision: {}
              f:source:
                .: {}
                f:chart: {}
                f:helm:
                  .: {}
                  f:parameters: {}
                f:repoURL: {}
                f:targetRevision: {}
          f:reconciledAt: {}
          f:resources: {}
          f:sourceType: {}
          f:summary:
            f:externalURLs: {}
            f:images: {}
          f:sync:
            f:revision: {}
            f:status: {}
      manager: argocd-application-controller
      operation: Update
      time: '2024-04-04T23:03:34Z'
  name: keycloak
  namespace: argocd
  resourceVersion: '556409'
  uid: e13948f1-dbd8-43d1-be2e-03467258042e
  selfLink: /apis/argoproj.io/v1alpha1/namespaces/argocd/applications/keycloak
status:
  controllerNamespace: argocd
  health:
    status: Healthy
  history:
    - deployStartedAt: '2023-08-28T14:10:52Z'
      deployedAt: '2023-08-28T14:10:53Z'
      id: 31
      revision: 16.0.5
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.0.5
    - deployStartedAt: '2023-09-14T20:36:20Z'
      deployedAt: '2023-09-14T20:36:22Z'
      id: 32
      revision: 16.1.4
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.4
    - deployStartedAt: '2023-09-14T20:43:43Z'
      deployedAt: '2023-09-14T20:43:46Z'
      id: 33
      revision: 16.1.4
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.4
    - deployStartedAt: '2023-09-28T16:42:07Z'
      deployedAt: '2023-09-28T16:42:08Z'
      id: 34
      revision: 16.1.7
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.7
    - deployStartedAt: '2023-09-28T16:47:45Z'
      deployedAt: '2023-09-28T16:47:46Z'
      id: 35
      revision: 16.1.7
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.7
    - deployStartedAt: '2023-09-28T16:48:13Z'
      deployedAt: '2023-09-28T16:48:15Z'
      id: 36
      revision: 16.1.7
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.7
    - deployStartedAt: '2024-04-02T23:27:45Z'
      deployedAt: '2024-04-02T23:27:49Z'
      id: 37
      revision: 19.4.1
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.4.1
    - deployStartedAt: '2024-04-03T03:34:03Z'
      deployedAt: '2024-04-03T03:34:19Z'
      id: 38
      revision: 19.4.1
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.4.1
    - deployStartedAt: '2024-04-03T04:21:45Z'
      deployedAt: '2024-04-03T04:21:48Z'
      id: 39
      revision: 19.4.1
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.4.1
    - deployStartedAt: '2024-04-03T04:33:41Z'
      deployedAt: '2024-04-03T04:33:48Z'
      id: 40
      revision: 19.4.1
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.4.1
  operationState:
    finishedAt: '2024-04-03T04:33:48Z'
    message: successfully synced (all tasks run)
    operation:
      initiatedBy:
        username: admin
      retry: {}
      sync:
        prune: true
        revision: 19.4.1
        syncOptions:
          - CreateNamespace=true
          - PruneLast=true
          - Replace=true
        syncStrategy:
          hook:
            force: true
    phase: Succeeded
    startedAt: '2024-04-03T04:33:41Z'
    syncResult:
      resources:
        - group: networking.k8s.io
          hookPhase: Running
          kind: NetworkPolicy
          message: |-
            networkpolicy.networking.k8s.io "keycloak" deleted
            networkpolicy.networking.k8s.io/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: networking.k8s.io
          hookPhase: Running
          kind: NetworkPolicy
          message: |-
            networkpolicy.networking.k8s.io "keycloak-postgresql" deleted
            networkpolicy.networking.k8s.io/keycloak-postgresql replaced
          name: keycloak-postgresql
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: ServiceAccount
          message: |-
            serviceaccount "keycloak" deleted
            serviceaccount/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: ServiceAccount
          message: |-
            serviceaccount "keycloak-postgresql" deleted
            serviceaccount/keycloak-postgresql replaced
          name: keycloak-postgresql
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Secret
          message: |-
            secret "keycloak" deleted
            secret/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Secret
          message: |-
            secret "keycloak-postgresql" deleted
            secret/keycloak-postgresql replaced
          name: keycloak-postgresql
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: ConfigMap
          message: |-
            configmap "keycloak-env-vars" deleted
            configmap/keycloak-env-vars replaced
          name: keycloak-env-vars
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "keycloak-postgresql-hl" deleted
            service/keycloak-postgresql-hl replaced
          name: keycloak-postgresql-hl
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "keycloak-headless" deleted
            service/keycloak-headless replaced
          name: keycloak-headless
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "keycloak" deleted
            service/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "keycloak-postgresql" deleted
            service/keycloak-postgresql replaced
          name: keycloak-postgresql
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: apps
          hookPhase: Running
          kind: StatefulSet
          message: |-
            statefulset.apps "keycloak-postgresql" deleted
            statefulset.apps/keycloak-postgresql replaced
          name: keycloak-postgresql
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: apps
          hookPhase: Running
          kind: StatefulSet
          message: |-
            statefulset.apps "keycloak" deleted
            statefulset.apps/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: networking.k8s.io
          hookPhase: Running
          kind: Ingress
          message: |-
            ingress.networking.k8s.io "keycloak" deleted
            ingress.networking.k8s.io/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
      revision: 19.4.1
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.4.1
  reconciledAt: '2024-04-04T23:03:34Z'
  resources:
    - kind: ConfigMap
      name: keycloak-env-vars
      namespace: keycloak
      status: Synced
      version: v1
    - kind: Secret
      name: keycloak
      namespace: keycloak
      status: OutOfSync
      version: v1
    - kind: Secret
      name: keycloak-postgresql
      namespace: keycloak
      status: OutOfSync
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak-headless
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak-postgresql
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak-postgresql-hl
      namespace: keycloak
      status: Synced
      version: v1
    - kind: ServiceAccount
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - kind: ServiceAccount
      name: keycloak-postgresql
      namespace: keycloak
      status: Synced
      version: v1
    - group: apps
      health:
        message: 'partitioned roll out complete: 1 new pods have been updated...'
        status: Healthy
      kind: StatefulSet
      name: keycloak
      namespace: keycloak
      status: OutOfSync
      version: v1
    - group: apps
      health:
        message: 'partitioned roll out complete: 1 new pods have been updated...'
        status: Healthy
      kind: StatefulSet
      name: keycloak-postgresql
      namespace: keycloak
      status: Synced
      version: v1
    - group: networking.k8s.io
      health:
        status: Healthy
      kind: Ingress
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - group: networking.k8s.io
      kind: NetworkPolicy
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - group: networking.k8s.io
      kind: NetworkPolicy
      name: keycloak-postgresql
      namespace: keycloak
      status: Synced
      version: v1
  sourceType: Helm
  summary:
    externalURLs:
      - http://keycloak.binesty.corp/
    images:
      - docker.io/bitnami/keycloak:23.0.7-debian-12-r4
      - docker.io/bitnami/postgresql:16.2.0-debian-12-r8
  sync:
    comparedTo:
      destination:
        namespace: keycloak
        server: https://kubernetes.default.svc
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.4.1
    revision: 19.4.1
    status: OutOfSync
spec:
  destination:
    namespace: keycloak
    server: https://kubernetes.default.svc
  project: infrastructure
  source:
    chart: keycloak
    helm:
      parameters:
        - name: ingress.enabled
          value: 'true'
        - name: ingress.hostname
          value: keycloak.binesty.corp
        - name: ingress.ingressClassName
          value: nginx
    repoURL: https://charts.bitnami.com/bitnami
    targetRevision: 19.4.1
  syncPolicy:
    automated: {}
    syncOptions:
      - CreateNamespace=true
